--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@astrojs/check": "^0.4.1",
     "@astrojs/rss": "^4.0.1",
+    "@giscus/react": "^2.4.0",
     "@resvg/resvg-js": "^2.6.0",
     "astro": "^4.1.1",
     "fuse.js": "^7.0.0",
