fix(seo):  google site verification

--- a/build.env
+++ b/build.env
@@ -1,1 +1,1 @@
-PUBLIC_GOOGLE_SITE_VERIFICATION="<meta name="google-site-verification" content="ph6X77FSAuZtQgl3oLyKFPYyttk550UovixDib1oXA8" />"
+PUBLIC_GOOGLE_SITE_VERIFICATION="ph6X77FSAuZtQgl3oLyKFPYyttk550UovixDib1oXA8"
