--- a/.pages.yml
+++ b/.pages.yml
@@ -3,3 +3,10 @@ content:
     label: Posts
     path: src/content/blog
     type: collection
+    view:
+      fields: [ tags ]
+    fields:
+      - name: tags
+        type: text
+        label: Tags
+        list: true
