Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -1,10 +1,9 @@
+media:
+  input: src/assets
+  output: src/assets
+
 content:
   - name: posts
     label: Posts
     path: src/content/blog
     type: collection
-    fields:
-      - name: tags
-        type: text
-        label: Tags
-        list: true
