Update .pages.yml (via Pages CMS)

--- a/.pages.yml
+++ b/.pages.yml
@@ -20,5 +20,5 @@ content:
         label: Title
         type: text
       - name: pubDatetime
-        label: Published at
+        label: Published
         type: date
