--- a/.pages.yml
+++ b/.pages.yml
@@ -5,20 +5,19 @@ media:
 content:
   - name: posts
     label: Posts
-    path: src/content/blog
     type: collection
+    path: src/content/blog
     view:
-      fields: [ title ]
-      primary: title
-      sort: [ pubDatetime, title ]
-      default:
-        search: ''
-        sort: title
-        order: desc
+      fields: [ title, draft, date ]
     fields:
-      - name: title
-        label: Title
-        type: text
-      - name: pubDatetime
-        label: Published at
-        type: date
+      - { name: author, label: Author, type: string }
+      - { name: pubDatetime, label: Date, type: date }
+      - { name: modDatetime, label: Date, type: date }
+      - { name: title, label: Title, type: string, required: true }
+      - { name: ogImage, label: Title, type: string }
+      - { name: slug, label: Slug, type: string }
+      - { name: featured, label: Featured, type: boolean }
+      - { name: draft, label: Draft, type: boolean }
+      - { name: tags, label: Tags, type: string, list: true }
+      - { name: description, label: Description, type: string }
+      - { name: body, label: Body, type: rich-text }
