--- a/.pages.yml
+++ b/.pages.yml
@@ -8,11 +8,11 @@ content:
     type: collection
     path: src/content/blog
     view:
-      fields: [ title, draft, date ]
+      fields: [ title, draft, pubDatetime ]
     fields:
       - { name: author, label: Author, type: string }
-      - { name: pubDatetime, label: Date, type: date }
-      - { name: modDatetime, label: Date, type: date }
+      - { name: pubDatetime, label: Published at, type: date }
+      - { name: modDatetime, label: Modified at, type: date }
       - { name: title, label: Title, type: string, required: true }
       - { name: ogImage, label: Title, type: string }
       - { name: slug, label: Slug, type: string }
