--- a/.pages.yml
+++ b/.pages.yml
@@ -14,7 +14,7 @@ content:
       - { name: pubDatetime, label: Published at, type: date }
       - { name: modDatetime, label: Modified at, type: date }
       - { name: title, label: Title, type: string, required: true }
-      - { name: ogImage, label: Title, type: string }
+      - { name: ogImage, label: OG image, type: string }
       - { name: slug, label: Slug, type: string }
       - { name: featured, label: Featured, type: boolean }
       - { name: draft, label: Draft, type: boolean }
