--- a/.pages.yml
+++ b/.pages.yml
@@ -21,3 +21,10 @@ content:
       - { name: tags, label: Tags, type: string, list: true }
       - { name: description, label: Description, type: string }
       - { name: body, label: Body, type: rich-text }
+  - name: about
+    label: About page
+    type: file
+    path: src/pages/about.md
+    fields:
+      - { name: title, label: Title, type: string }
+      - { name: body, label: Body, type: rich-text }
