--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nordlys",
   "type": "module",
-  "version": "2.3.2",
+  "version": "2.4.0",
   "description": "A minimal Astro blog theme",
   "author": "FjellOverflow",
   "license": "GPL-3.0-only",
@@ -31,47 +31,48 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "^4.2.6",
-    "@astrojs/rss": "^4.0.11",
-    "@astrojs/sitemap": "^3.3.1",
-    "@fontsource/ibm-plex-sans": "^5.2.5",
-    "@iconify-json/tabler": "^1.2.17",
+    "@astrojs/mdx": "^4.3.1",
+    "@astrojs/rss": "^4.0.12",
+    "@astrojs/sitemap": "^3.4.1",
+    "@fontsource/ibm-plex-sans": "^5.2.6",
+    "@iconify-json/tabler": "^1.2.19",
     "@resvg/resvg-js": "^2.6.2",
     "@tailwindcss/typography": "^0.5.16",
-    "@tailwindcss/vite": "^4.1.5",
-    "astro": "^5.7.12",
+    "@tailwindcss/vite": "^4.1.11",
+    "astro": "^5.12.0",
     "mdast-util-to-string": "^4.0.0",
     "pagefind": "^1.3.0",
     "reading-time": "^1.5.0",
-    "satori": "^0.12.2",
-    "sharp": "^0.34.1",
-    "tailwind-scrollbar-hide": "^2.0.0",
-    "tailwindcss": "^4.1.5"
+    "satori": "^0.15.2",
+    "sharp": "^0.34.3",
+    "tailwind-scrollbar-hide": "^4.0.0",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
-    "@eslint/js": "^9.26.0",
+    "@eslint/js": "^9.31.0",
     "@iconify/tailwind4": "^1.0.6",
-    "@typescript-eslint/parser": "^8.32.0",
+    "@typescript-eslint/parser": "^8.37.0",
     "commit-and-tag-version": "^12.5.1",
-    "eslint": "^9.26.0",
-    "eslint-config-prettier": "^10.1.5",
+    "eslint": "^9.31.0",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-prettier": "^5.4.0",
-    "globals": "^16.1.0",
-    "prettier": "^3.5.3",
+    "eslint-plugin-prettier": "^5.5.3",
+    "globals": "^16.3.0",
+    "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.11",
-    "stylelint": "^16.19.1",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "stylelint": "^16.22.0",
     "stylelint-config-html": "^1.1.0",
     "stylelint-config-recommended": "^16.0.0",
     "type-fest": "^4.41.0",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.0"
+    "typescript-eslint": "^8.37.0"
   },
-  "packageManager": "pnpm@10.10.0",
+  "packageManager": "pnpm@10.13.1",
   "pnpm": {
     "onlyBuiltDependencies": [
+      "@tailwindcss/oxide",
       "esbuild",
       "sharp"
     ]
