--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nordlys",
   "type": "module",
-  "version": "2.4.0",
+  "version": "2.5.0",
   "description": "A minimal Astro blog theme",
   "author": "FjellOverflow",
   "license": "GPL-3.0-only",
@@ -43,6 +43,7 @@
     "mdast-util-to-string": "^4.0.0",
     "pagefind": "^1.3.0",
     "reading-time": "^1.5.0",
+    "remark-sectionize": "^2.1.0",
     "satori": "^0.15.2",
     "sharp": "^0.34.3",
     "tailwind-scrollbar-hide": "^4.0.0",
