--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nordlys",
   "type": "module",
-  "version": "2.5.0",
+  "version": "3.0.0",
   "description": "A minimal Astro blog theme",
   "author": "FjellOverflow",
   "license": "GPL-3.0-only",
@@ -31,46 +31,49 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/mdx": "^4.3.1",
+    "@astrojs/mdx": "^4.3.5",
     "@astrojs/rss": "^4.0.12",
-    "@astrojs/sitemap": "^3.4.1",
+    "@astrojs/sitemap": "^3.5.1",
+    "@expressive-code/plugin-collapsible-sections": "^0.41.3",
+    "@expressive-code/plugin-line-numbers": "^0.41.3",
     "@fontsource/ibm-plex-sans": "^5.2.6",
-    "@iconify-json/tabler": "^1.2.19",
+    "@iconify-json/tabler": "^1.2.22",
     "@resvg/resvg-js": "^2.6.2",
     "@tailwindcss/typography": "^0.5.16",
-    "@tailwindcss/vite": "^4.1.11",
-    "astro": "^5.12.0",
+    "@tailwindcss/vite": "^4.1.13",
+    "astro": "^5.13.6",
+    "astro-expressive-code": "^0.41.3",
     "mdast-util-to-string": "^4.0.0",
-    "pagefind": "^1.3.0",
+    "pagefind": "^1.4.0",
     "reading-time": "^1.5.0",
     "remark-sectionize": "^2.1.0",
-    "satori": "^0.15.2",
+    "satori": "^0.18.2",
     "sharp": "^0.34.3",
     "tailwind-scrollbar-hide": "^4.0.0",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.13"
   },
   "devDependencies": {
-    "@eslint/js": "^9.31.0",
+    "@eslint/js": "^9.35.0",
     "@iconify/tailwind4": "^1.0.6",
-    "@typescript-eslint/parser": "^8.37.0",
-    "commit-and-tag-version": "^12.5.1",
-    "eslint": "^9.31.0",
+    "@typescript-eslint/parser": "^8.43.0",
+    "commit-and-tag-version": "^12.6.0",
+    "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-prettier": "^5.5.3",
+    "eslint-plugin-prettier": "^5.5.4",
     "globals": "^16.3.0",
     "prettier": "^3.6.2",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.14",
-    "stylelint": "^16.22.0",
+    "stylelint": "^16.24.0",
     "stylelint-config-html": "^1.1.0",
-    "stylelint-config-recommended": "^16.0.0",
+    "stylelint-config-recommended": "^17.0.0",
     "type-fest": "^4.41.0",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.37.0"
+    "typescript": "^5.9.2",
+    "typescript-eslint": "^8.43.0"
   },
-  "packageManager": "pnpm@10.13.1",
+  "packageManager": "pnpm@10.15.1",
   "pnpm": {
     "onlyBuiltDependencies": [
       "@tailwindcss/oxide",
